--- a/examples/simple-productname-cluster.yaml
+++ b/examples/simple-productname-cluster.yaml
@@ -1,25 +1,13 @@
-apiVersion: zookeeper.stackable.tech/v1alpha1
-kind: ZookeeperCluster
+apiVersion: productname.stackable.tech/v1alpha1
+kind: ProductnameCluster
 metadata:
   name: simple
 spec:
-  version: 3.5.8
+  version: 1.0.0
   servers:
     roleGroups:
       default:
         selector:
-          matchExpressions:
-            - operator: In
-              key: kubernetes.io/hostname
-              values:
-                - worker-1.stackable.demo
-                - worker-2.stackable.demo
-                - worker-3.stackable.demo
-        config:
-          adminPort: 12000
-          metricsPort: 9505
-
-
-
-
-
+          matchLabels:
+            kubernetes.io/os: stackable-linux
+        config: {}
